<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.DetailTipsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/bluee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:text="Detail Tips"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/judul_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/jdtips"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_title" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="189dp"
        android:layout_height="163dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:src="@drawable/img_tips_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul_tips" />

    <TextView
        android:id="@+id/sumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/sumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <TextView
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sumber"/>


</androidx.constraintlayout.widget.ConstraintLayout>